@@ -16,6 +16,8 @@ obsplus master:
   - obsplus.stations
     * Fixed issue where networks and stations could be left un-pruned when
       querying on channel (see #115).
+    * Handled an edge case in df_to_inv where an integer NSLC code gets
+      misinterpreted by pandas (see #130 and #132).
   - obsplus.utils
     * Deprecate get_nslc_series in favor of get_seed_id_series (#120).
   - obsplus.validate
